Fix bug 89734 -- ensure that we pass the old update region in local, not global coordinates to InvalWindowRgn. Also cleaned up the paint flashing code, and standardized the method definitions. r=pink, sr=scc